; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_DoSave.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_DoSave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@savegamestrings = common dso_local global i32* null, align 8
@quickSaveSlot = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_DoSave(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32*, i32** @savegamestrings, align 8
  %5 = load i32, i32* %2, align 4
  %6 = sext i32 %5 to i64
  %7 = getelementptr inbounds i32, i32* %4, i64 %6
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @G_SaveGame(i32 %3, i32 %8)
  %10 = call i32 (...) @M_ClearMenus()
  %11 = load i32, i32* @quickSaveSlot, align 4
  %12 = icmp eq i32 %11, -2
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %2, align 4
  store i32 %14, i32* @quickSaveSlot, align 4
  br label %15

15:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @G_SaveGame(i32, i32) #1

declare dso_local i32 @M_ClearMenus(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
